2020-07-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac, magick/blob.c: Merge changeset by Przemysław
	Sobala regarding "Configure: add --with(out)-compressed-files
	option".  The configure option was changed to
	--disable-compressed-files during the merge since it is more
	appropriate.

2020-07-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update with changes up to 2020-07-15.

	* magick/render.c (DrawImage): Improve error handling so errors
	are returned when they should be.  Fixes oss-fuzz 24117
	"Stack-overflow in DrawImage" and oss-fuzz 24126 "Timeout in
	coder_MVG_fuzzer".  Restore the original behavior of
	DrawClipPath() when there is no matching clip-path attribute.

2020-07-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update with changes up to 2020-07-12.

2020-07-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXVisualColormapSize): Fix UBSAN integer
	overflow warning.

	* magick/render.c (DrawClipPath): Report only a warning if there
	is no clip mask.
	(ExtractTokensBetweenPushPop): Verify that the expected/required
	pop statement is indeed found.  Fixes oss-fuzz 23498 "Timeout in
	coder_MVG_fuzzer".

2020-06-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ReadImage): Improve error handling related
	to ImageToFile().

	* magick/image.c (SetImageInfo): Improve error handling related to
	ImageToFile().

	* coders/mat.c: Check MagickFindRawImageMinMax() return status.

	* magick/constitute.c (MagickFindRawImageMinMax): Verify that the
	original seek position was restored.

2020-06-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Apply stricter range limits when
	converting a double to a long in order to avoid integer overflow.
	Fixes oss-fuzz 23304 "Integer-overflow in DrawImage".
	(DrawClipPath): If there is no matching clip-path attribute then